--- a/style/connexion.css
+++ b/style/connexion.css
@@ -36,7 +36,7 @@ body, html {
 
 .login-box input {
     width: 100%;
-    padding: 10px;
+    padding: 5px;
     margin-bottom: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -56,4 +56,12 @@ body, html {
 
 .login-box button:hover {
     background-color: rgb(157, 188, 213);
+}
+
+#page-principal:hover{
+    background-color: black;
+}
+
+#page-principal{
+    background-color: gray;
 }
