--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,9 @@
 *{
   Font-family: Copperplate, Copperplate Gothic Light, fantasy;
-  
+  margin: 0;
 }
 
 header {
-  margin: -10px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -31,6 +30,7 @@ header {
   margin-right: 10px; 
 }
 
+
 .logo-text {
   font-size: 25px; 
   color: #333; 
@@ -51,5 +51,35 @@ nav ul li a {
   text-decoration: none;
   font-size: 1rem;
   color: #333; 
+}
+
+
+
+
+
+.bloc {
+  height: 65vh;
+  width: 100%;
+  background-color: black;
+  position: relative; /* Nécessaire pour positionner les enfants avec position absolue */
+}
+
+.bloc video {
+  height: 100%;
+  width: 100%;
+  object-fit: cover; /* Assure que la vidéo couvre bien tout le conteneur */
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1; /* Vidéo derrière */
+}
+
+.bloc .overlay-image {
+  position: absolute;
+  bottom: 0; /* Positionne au centre verticalement */
+  left: 50%; /* Positionne au centre horizontalement */
+  transform: translate(-50%); /* Centre l'image par rapport au milieu */
+  z-index: 2; /* Image au-dessus */
+  width: 75%; /* Ajuste la taille selon tes besoins */
 }
 
