--- a/style/location.css
+++ b/style/location.css
@@ -6,7 +6,57 @@ body {
     color: #fff;
 }
 
-.header {
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 10px; /* Ajustez selon vos besoins */
+    background-color: #73c2fb; /* Optionnel : couleur de fond */
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+  
+  .menu {
+    display: flex;
+    align-items: center;
+  }
+  
+  .menu a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+  }
+  
+  .logo-image {
+    width: 50px; 
+    height: auto;
+    margin-right: 10px; 
+  }
+  
+  
+  .logo-text {
+    font-size: 25px; 
+    color: #333; 
+  }
+  
+  nav ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  nav ul li {
+    margin: 0 15px; 
+  }
+  
+  nav ul li a {
+    text-decoration: none;
+    font-size: 1rem;
+    color: #333; 
+  }
+  
+.headder {
     background-color: #fff;
     color: #73C2FB;
     text-align: center;
