--- a/style/histoire.css
+++ b/style/histoire.css
@@ -7,8 +7,57 @@ body {
     line-height: 1.6;
 }
 
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 10px; /* Ajustez selon vos besoins */
+    background-color: #73c2fb; /* Optionnel : couleur de fond */
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+  
+  .menu {
+    display: flex;
+    align-items: center;
+  }
+  
+  .menu a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+  }
+  
+  .logo-image {
+    width: 50px; 
+    height: auto;
+    margin-right: 10px; 
+  }
+  
+  
+  .logo-text {
+    font-size: 25px; 
+    color: #333; 
+  }
+  
+  nav ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  nav ul li {
+    margin: 0 15px; 
+  }
+  
+  nav ul li a {
+    text-decoration: none;
+    font-size: 1rem;
+    color: #333; 
+  }
 /* Header */
-.header {
+.headder {
     text-align: center;
     background: linear-gradient(135deg, #3498db, #2ecc71);
     color: white;
