--- a/style/souscription.css
+++ b/style/souscription.css
@@ -1,22 +1,79 @@
-body { 
+*{
+    margin: 0;
     Font-family: Copperplate, Copperplate Gothic Light, fantasy; 
-    margin: 0; 
-    padding: 0; 
-    display: flex; 
-    justify-content: center; 
-    align-items: center;
-    min-height: 100vh; 
-    background-color: aliceblue; 
-} 
+}
 
+
+
+
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0;
+    padding: 10px 10px; /* Ajustez selon vos besoins */
+    background-color: #73c2fb; /* Optionnel : couleur de fond */
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+
+
+  body{
+    background-color: aliceblue;
+  }
+
+  .menu {
+    display: flex;
+    align-items: center;
+  }
+  
+  .menu a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+  }
+  
+  .logo-image {
+    width: 50px; 
+    height: auto;
+    margin-right: 10px; 
+  }
+  
+  
+  .logo-text {
+    font-size: 25px; 
+    color: #333; 
+  }
+  
+  nav ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  nav ul li {
+    margin: 0 15px; 
+  }
+  
+  nav ul li a {
+    text-decoration: none;
+    font-size: 1rem;
+    color: #333; 
+  }
 
 /* Conteneur principal */
 .container {
     display: flex;
     gap: 20px;
-    justify-content: center;
-    margin-top: 50px;
+    justify-content: center; /* Centre horizontalement */
+    align-items: center; /* Centre verticalement */
+    height: 100vh; /* Fait en sorte que le conteneur prenne toute la hauteur de la fenêtre */
+    margin: 0; /* Supprime les marges par défaut */
+    padding: 0; /* Supprime le padding */
 }
+
 
 /* Carte */
 .card {
