--- a/style/style.css
+++ b/style/style.css
@@ -4,13 +4,11 @@
 }
 
 header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px 10px; /* Ajustez selon vos besoins */
-  background-color: #73c2fb; /* Optionnel : couleur de fond */
-  text-transform: uppercase;
-  font-weight: bold;
+  position: sticky; /* Rend le header collant */
+  top: 0; /* Le header reste collé au sommet de la fenêtre */
+  z-index: 1000; /* Assure qu'il reste au-dessus des autres éléments */
+  background-color: #73c2fb; /* Conserve votre couleur de fond */
+  padding: 10px 10px; /* Conserve votre espacement interne */
 }
 
 .menu {
@@ -62,6 +60,7 @@ nav ul li a {
   width: 100%;
   background-color: black;
   position: relative; /* Nécessaire pour positionner les enfants avec position absolue */
+  
 }
 
 .bloc video {
@@ -105,3 +104,94 @@ nav ul li a {
   }
 }
 
+footer {
+  background-color: #73c2fb; /* Couleur bleu maya */
+  color: #ffffff; /* Texte blanc */
+  padding: 20px 10px;
+  font-size: 0.9rem;
+  text-align: center;
+}
+
+.footer-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #ffffff;
+}
+
+.footer-logo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.footer-logo-image {
+  width: 50px;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+.footer-links ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-links ul li {
+  margin: 5px 0;
+}
+
+.footer-links ul li a {
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.footer-links ul li a:hover {
+  text-decoration: underline;
+}
+
+.footer-contact p {
+  margin: 5px 0;
+}
+
+.footer-contact a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.footer-contact a:hover {
+  text-decoration: underline;
+}
+
+.footer-bottom {
+  margin-top: 10px;
+}
+
+.footer-bottom p {
+  margin: 5px 0;
+}
+
+.footer-bottom a {
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.footer-bottom a:hover {
+  text-decoration: underline;
+}
+
+/* Adaptation pour les téléphones (moins de 768px de largeur) */
+@media (max-width: 768px) {
+  .footer-content {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer-logo, .footer-links, .footer-contact {
+    margin-bottom: 15px;
+  }
+}
