--- a/style/style.css
+++ b/style/style.css
@@ -15,6 +15,7 @@ header {
   align-items: center; /* Aligne les éléments verticalement */
   justify-content: space-between; /* Espacement uniforme entre les éléments */
   flex-wrap: nowrap; /* Empêche les éléments de passer à la ligne */
+  font-weight: bold;
 }
 nav a:hover {
   border-bottom: 2px solid #fff;
