--- a/style/leasing.css
+++ b/style/leasing.css
@@ -70,6 +70,7 @@ h2 {
   padding: 10px;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+  transition: transform 0.3s;
 }
 
 .car img {
@@ -171,6 +172,11 @@ nav ul li a {
   text-decoration: none;
   font-size: 1rem;
   color: #333; 
+}
+
+
+.car:hover {
+  transform: scale(1.05);
 }
 
 @media (max-width: 768px) {
